<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="clkHideKeyboard"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:background="#C4BFBF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_uid"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/need_uid"/>

        <EditText
            android:id="@+id/et_upw"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/need_upw"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:onClick="clkLogin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_join"
            android:onClick="clkJoin"/>

    </LinearLayout>

</RelativeLayout>